Added backwards compatibility support using AppCompat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,33 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         <activity android:name=".MainActivity"
-            android:launchMode="singleTop"
-            >
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MentorListActivity"
             android:label="Mentors"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.chelsel.scheduler.MainActivity" />
+        </activity>
         <activity
             android:name=".TermListActivity"
             android:label="@string/title_term_list"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.chelsel.scheduler.MainActivity" />
+        </activity>
+        <activity
+            android:name=".CourseListActivity"
+            android:label="@string/title_course_list"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -44,6 +54,13 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.chelsel.scheduler.MentorListActivity" />
+        </activity>
+        <activity
+            android:name=".CourseAddEditActivity"
+            android:parentActivityName=".CourseListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.chelsel.scheduler.CourseListActivity" />
         </activity>
     </application>
 
